--- a/popup.css
+++ b/popup.css
@@ -34,3 +34,12 @@
 .btn:hover {
   background-color: #0065ff;
 }
+
+.options-item {
+  display: flex;
+  align-items: center;
+}
+
+.type-container {
+  margin-bottom: 20px;
+}
