--- a/popup.css
+++ b/popup.css
@@ -1,16 +1,32 @@
 .body {
-  min-width: 300px;
-  padding: 15px;
+  min-width: 330px;
+  font-size: 15px;
+  padding: 0;
+  margin: 0;
+
+  font-family: Roboto, sans-serif;
+  font-size: .875rem;
+  line-height: 1.25rem;
+  font-weight: 400;
+  color: rgba(0, 0, 0, 0.87);
 }
+
 .type-container {
- /* width: 300px; */
- display: flex;
+  display: flex;
+  box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.4);
+  padding: 10px;
+  margin-bottom: 5px;
+}
+
+.options-container {
+  padding: 10px;
 }
 
 .type-item {
  margin: 0 8px;
  display: flex;
  align-items: center;
+ font-weight: 500;
 }
 
 .btn {
@@ -38,8 +54,24 @@
 .options-item {
   display: flex;
   align-items: center;
+  margin-bottom: 4px;
 }
 
-.type-container {
-  margin-bottom: 20px;
+.sub-options {
+  padding-left: 10px;
+}
+
+.type-container input, .options-container input {
+  margin-right: 7px;
+}
+
+.button-container {
+  box-shadow: -1px 0px 5px 0px rgba(0,0,0,0.4);
+  padding: 10px;
+}
+
+
+#add-description {
+  margin: 0 auto;
+  display: block;
 }
